--- a/index.html
+++ b/index.html
@@ -16,13 +16,7 @@
     </style>
     <script src="game.js"></script>
 </head>
-<body onload="startGame()">
-    <!-- <h1 id="gameTitle">Space Limit!</h1> -->
-    <h1 id="scoreboard">Score: </h1>
-    <h1 id="level">Level: </h1>
-
-    <script>
-
-    </script>
+<body>
+  <button onclick="startGame()">Play</button>
 </body>
 </html>
