--- a/index.html
+++ b/index.html
@@ -6,17 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
+      html {
+        height: 100%;
+        background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+      }
       html, body {
           padding: 0; margin: 0;
           overflow:hidden;
       }
-        canvas{
+        /*canvas{
             background-color: grey;
+        }*/
+        .button { /* Green */
+            background: none;
+            border-color: white;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 20px;
+            margin-top: 25%;
+    margin-left: 45%;
+            cursor: pointer;
+            border-radius: 30px;
         }
+
     </style>
     <script src="game.js"></script>
 </head>
 <body>
-  <button onclick="startGame()">Play</button>
+  <button class="button" onclick="startGame()">Play</button>
 </body>
 </html>
