--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Space Limit</title>
     <style>
       html {
         height: 100%;
@@ -24,18 +24,32 @@
             padding: 15px 32px;
             text-align: center;
             text-decoration: none;
-            display: inline-block;
             font-size: 20px;
-            margin-top: 25%;
-    margin-left: 45%;
+            display: inline-block;
             cursor: pointer;
             border-radius: 30px;
+        }
+        .button:hover {
+            background-color: white;
+            color: black;
+        }
+        .title {
+          color: white;
+        }
+        .cover {
+          margin-top: 23%;
+          margin-left: 45%;
+          width: 165px;
+          text-align: center;
         }
 
     </style>
     <script src="game.js"></script>
 </head>
 <body>
-  <button class="button" onclick="startGame()">Play</button>
+  <div class="cover">
+    <h1 class="title">Space Limit</h1>
+    <button class="button" onclick="startGame()">Play</button>
+  </div>
 </body>
 </html>
