--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Space Limit</title>
@@ -15,7 +17,7 @@
           overflow:hidden;
       }
         /*canvas{
-            background-color: grey;
+            background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
         }*/
         .button { /* Green */
             background: none;
@@ -37,10 +39,14 @@
           color: white;
         }
         .cover {
-          margin-top: 23%;
-          margin-left: 45%;
-          width: 165px;
+          transform: translate(-50%, 0);
+          width: 300px;
           text-align: center;
+          position: absolute;
+          left: 50%;
+          bottom: 50%;
+          top: 50%;
+          display:block;
         }
         .ui{
           position: absolute;
@@ -55,13 +61,14 @@
         }
 
     </style>
-    <script src="game.js"></script>
+    <script type="text/javascript" src="game.js"></script>
+    <script src='virtualjoystick.js'></script>
 </head>
 <body>
   <div id="ui" class="ui">
     <button onclick="startGame()" id="retry" class="button">Play Again</button>
   </div>
-  <div class="cover">
+  <div class="cover" id="cover">
     <h1 class="title">Space Limit</h1>
     <button class="button" onclick="startGame()">Play</button>
   </div>
