--- a/index.html
+++ b/index.html
@@ -2,22 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="theme-color" content="#1b2735">
     <title>Space Limit</title>
+    <link rel="manifest" href="manifest.json">
+    <link rel="icon" type="image/png" href="image/launcher-icon-0-75x.png" />
     <link rel="stylesheet" href="game.css">
     <script type="text/javascript" src="game.js"></script>
     <script src='virtualjoystick.js'></script>
 </head>
 <body>
-  <div id="ui" class="ui">
-    <button onclick="startGame()" id="retry" class="button">Play Again</button>
-  </div>
   <div class="cover" id="cover">
     <h1 class="title">Space Limit</h1>
     <button class="button" onclick="startGame()">Play</button>
+  </div>
+  <div id="control"></div>
+  <div id="ui" class="ui">
+    <button onclick="startGame()" id="retry" class="button">Play Again</button>
   </div>
 </body>
 </html>
