local storage name

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>
   <div class="cover" id="cover">
     <h1 class="title">Space Limit</h1>
-    <button class="button" onclick="startGame()">Play</button>
+    <input type="text" id="playerName"></input>
+    <button class="button" onclick="startGame(); save()">Play</button>
   </div>
   <div id="control"></div>
   <div id="ui" class="ui">
