input text style

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="cover" id="cover">
     <h1 class="title">Space Limit</h1>
-    <input type="text" id="playerName"></input>
+    <input type="text" class="txt" id="playerName" placeholder="input player name .."></input>
     <button class="button" onclick="startGame(); save()">Play</button>
   </div>
   <div id="control"></div>
