--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 <body>
   <div class="cover" id="cover">
-    <h1 class="title">Space Limit</h1>
+    <!-- <h1 class="title">Space Limit</h1> -->
+    <img src="image/cover.png" class="imgCover">
     <input type="text" class="txt" id="playerName" placeholder="input player name .."></input>
     <button class="button" onclick="startGame(); save()">Play</button>
   </div>
