--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/png" href="image/launcher-icon-0-75x.png" />
     <link rel="stylesheet" href="style/game.css">
+    <script type="text/javascript" src="scripts/touch.js"></script>
     <script type="text/javascript" src="scripts/game.js"></script>
-    <script src='scripts/virtualjoystick.js'></script>
 </head>
 <body>
-  <div class="cover" id="cover">
-    <!-- <h1 class="title">Space Limit</h1> -->
+  <div class="menuPlay play" id="cover">
     <img src="image/cover.png" class="imgCover">
     <input type="text" class="txt" id="playerName" placeholder="input player name .."></input>
     <button class="button" onclick="startGame(); save()">Play</button>
   </div>
-  <div id="control"></div>
-  <div id="ui" class="ui">
+  <div id="ui" class="menuPlay gameOver">
+    <!-- <h1>GAME OVER</h1>
+    <h3>Score : </h3>
+    <h3>High Score :</h3> -->
     <button onclick="startGame()" id="retry" class="button">Play Again</button>
   </div>
   <script>
