--- a/index.html
+++ b/index.html
@@ -9,20 +9,27 @@
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/png" href="image/launcher-icon-0-75x.png" />
     <link rel="stylesheet" href="style/game.css">
+    <link rel="stylesheet" href="style/bootstrap.min.css">
     <script type="text/javascript" src="scripts/touch.js"></script>
     <script type="text/javascript" src="scripts/game.js"></script>
 </head>
 <body>
-  <div class="menuPlay play" id="cover">
-    <img src="image/cover.png" class="imgCover">
-    <input type="text" class="txt" id="playerName" placeholder="input player name .."></input>
-    <button class="button" onclick="startGame(); save()">Play</button>
-  </div>
-  <div id="ui" class="menuPlay gameOver">
-    <!-- <h1>GAME OVER</h1>
-    <h3>Score : </h3>
-    <h3>High Score :</h3> -->
-    <button onclick="startGame()" id="retry" class="button">Play Again</button>
+  <div class="container cover">
+    <div class="row align-items-center">
+      <div class="col-sm-6 offset-sm-3 col-md-4 offset-md-4">
+        <div class="play" id="cover">
+          <img src="image/cover.png" class="imgCover">
+          <input type="text" class="txt" id="playerName" placeholder="input player name .."></input>
+          <button class="button" onclick="startGame(); save()">Play</button>
+        </div>
+        <div id="ui" class="gameOver">
+          <!-- <h1>GAME OVER</h1>
+          <h3>Score : </h3>
+          <h3>High Score :</h3> -->
+          <button onclick="startGame()" id="retry" class="button">Play Again</button>
+        </div>
+      </div>
+    </div>
   </div>
   <script>
     if('serviceWorker' in navigator) {
