--- a/index.html
+++ b/index.html
@@ -16,22 +16,52 @@
 <body>
   <div class="container cover">
     <div class="row align-items-center">
-      <div class="col-sm-6 offset-sm-3 col-md-4 offset-md-4">
+      <div class="col-sm-6 offset-sm-3 col-md-10 offset-md-1">
         <div class="play" id="cover">
           <img src="image/cover.png" class="imgCover">
           <input type="text" class="txt" id="playerName" placeholder="input player name .."></input>
           <button class="button" onclick="startGame(); save()">Play</button>
         </div>
-        <div id="ui" class="gameOver">
-          <!-- <h1>GAME OVER</h1>
-          <h3>Score : </h3>
-          <h3>High Score :</h3> -->
-          <button onclick="startGame()" id="retry" class="button">Play Again</button>
-        </div>
       </div>
     </div>
   </div>
-  <script>
+  <div id="ui" class="container cover gameOver">
+    <div class="row align-items-center">
+      <div class="col-sm-10 offset-sm-1 col-md-10 offset-md-1">
+        <div class="stat">
+          <div class="gameEnd">
+            <h4>GAME OVER</h4>
+          </div>
+          <h5>
+            <table>
+              <tr>
+                <td>Level</td>
+                <td> : </td>
+                <td><span id="level"></span></td>
+              </tr>
+              <tr>
+                <td>Score</td>
+                <td> : </td>
+                <td><span id="score"></span></td>
+              </tr>
+              <tr>
+                <td>High Score</td>
+                <td> : </td>
+                <td><span id="high"></span></td>
+              </tr>
+            </table>
+          </h5>
+          <div class="gameEnd">
+            <a href="https://twitter.com/share" class="twitter-share-button" data-size="large" data-text="Saya memainkan Space Limit, dapatkah anda mengalahkan saya?" data-url="https://putrawitama.github.io/space/" data-hashtags="SpaceLimit" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <div class="g-plus" data-action="share" data-annotation="none" data-height="24" data-width="100px" data-href="https://putrawitama.github.io/space/"></div>
+            <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fputrawitama.github.io%2Fspace%2F&layout=button&size=large&mobile_iframe=true&appId=1957520571137976&width=87&height=28" width="87" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+          </div>
+        </div>
+        <button onclick="startGame()" id="retry" class="button">Play Again</button>
+      </div>
+    </div>
+  </div>
+  <!-- <script>
     if('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js', { scope: '/space/' })
         .then(function(registration) {
@@ -42,6 +72,9 @@
          console.log('Service Worker Ready');
       });
     }
-  </script>
+  </script> -->
+  <script src="https://apis.google.com/js/platform.js" async defer>
+  {lang: 'id'}
+</script>
 </body>
 </html>
