--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <img src="image/cover.png" class="imgCover">
           <input type="text" class="txt" id="playerName" placeholder="input player name .."></input>
           <div class="row">
-            <div class="col col-sm-4 col-md-4">
+            <div class="col-4 col-sm-4 col-md-4">
               <button class="button" onclick="startGame(); save()"><i class="fa fa-play" aria-hidden="true"></i></button>
             </div>
             <div class="col col-sm-2 col-md-2">
@@ -80,7 +80,7 @@
         </div>
         <div class="row">
           <div class="col">
-            <button onclick="back()" class="button">Main Menu</button>
+            <button onclick="back()" class="button"><i class="fa fa-home" aria-hidden="true"></i> Main Menu</button>
           </div>
           <div class="col">
             <button onclick="startGame()" id="retry" class="button"><i class="fa fa-repeat" aria-hidden="true"></i></button>
@@ -115,6 +115,30 @@
         <div class="stat">
           <div class="gameEnd">
             <h4>CARA BERMAIN</h4>
+            <p>Hindari Garisnya & ambil poinnya</p>
+          </div>
+          <div class="row">
+            <div class="col">
+              <p><strong><i class="fa fa-desktop" aria-hidden="true"></i> Desktop</strong></p>
+              <ul style="list-style-type:none">
+                <li><i class="fa fa-arrow-up" aria-hidden="true"></i> Arah Atas</li>
+                <li><i class="fa fa-arrow-down" aria-hidden="true"></i> Arah Bawah</li>
+                <li><i class="fa fa-arrow-right" aria-hidden="true"></i> Arah Kanan</li>
+                <li><i class="fa fa-arrow-left" aria-hidden="true"></i> Arah Kiri</li>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <p><strong><i class="fa fa-mobile" aria-hidden="true"></i> Mobile</strong></p>
+              Sentuh dan geser layar smartphone maka akan muncul joystick virtualnya.
+              <ul style="list-style-type:none">
+                <li>Geser ke atas untuk Arah Atas</li>
+                <li>Geser ke bawah untuk Arah Bawah</li>
+                <li>Geser ke kanan untuk Arah Kanan</li>
+                <li>Geser ke kiri untuk Arah Kiri</li>
+              </ul>
+            </div>
           </div>
         </div>
         <div class="row">
@@ -133,6 +157,55 @@
         <div class="stat">
           <div class="gameEnd">
             <h4>ABOUT US</h4>
+          </div>
+          <div class="row">
+            <div class="col">
+              <p align="justify">Pesawat luar angkasa yang mencari bintang biru,
+                  bisakah pesawat tersebut menemukannya?
+                  game casual ini sangat mudah untuk dimainkan.
+                  Game ini dibuat untuk melatih refleks dan ketangkasan pemain
+                  dan dapat dimainkan pada semua umur (E10+).
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <p>Credit Tim :</p>
+              <table>
+                <tr>
+                  <td>Dosen</td>
+                  <td> : <strong>Rizky Parlika S.Kom, M.Kom</strong></td>
+                </tr>
+                <tr>
+                  <td>Programmer</td>
+                  <td> : Fathurrachman, Mukti Wibowo, sepdika Geia</td>
+                </tr>
+                <tr>
+                  <td>Desain</td>
+                  <td> : Mukti Wibowo</td>
+                </tr>
+                <tr>
+                  <td>Layout</td>
+                  <td> : Fathurrachman, Rahmadhoni</td>
+                </tr>
+                <tr>
+                  <td>Database</td>
+                  <td> : Sepdika Geia, Hamzah Rasyidi</td>
+                </tr>
+                <tr>
+                  <td>Testing</td>
+                  <td> : Muhammad Muzakki, Novan Laksana</td>
+                </tr>
+                <tr>
+                  <td>Dokumentasi</td>
+                  <td> : Hamzah Rasyidi, Afrina Nur</td>
+                </tr>
+                <tr>
+                  <td>Video</td>
+                  <td> : Novan Laksana</td>
+                </tr>
+              </table>
+            </div>
           </div>
         </div>
         <div class="row">
