--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
   <!-- ini cover -->
   <div id="cover" class="container cover">
     <div class="row align-items-center">
-      <div class="col-sm-6 offset-sm-3 col-md-10 offset-md-1">
+      <div class="col-sm-10 offset-sm-1 col-md-10 offset-md-1">
         <div class="play">
           <img src="image/cover.png" class="imgCover">
           <input type="text" class="txt" id="playerName" placeholder="input player name .."></input>
           <div class="row">
-            <div class="col-4 col-sm-4 col-md-4">
+            <div class="col-4">
               <button class="button" onclick="startGame(); save()"><i class="fa fa-play" aria-hidden="true"></i></button>
             </div>
-            <div class="col col-sm-2 col-md-2">
+            <div class="col-2">
               <button class="button" onclick="setting()"><i class="fa fa-cog" aria-hidden="true"></i></button>
             </div>
-            <div class="col col-sm-2 col-md-2">
+            <div class="col-2">
               <button class="button" onclick="help()"><i class="fa fa-question" aria-hidden="true"></i></button>
             </div>
-            <div class="col col-sm-2 col-md-2">
+            <div class="col-2">
               <button class="button" onclick="about()"><i class="fa fa-info" aria-hidden="true"></i></button>
             </div>
-            <div class="col col-sm-2 col-md-2">
+            <div class="col-2">
               <button class="button" onclick=""><i class="fa fa-download" aria-hidden="true"></i></button>
             </div>
           </div>
