--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <input type="text" class="txt" id="playerName" placeholder="input player name .."></input>
           <div class="row">
             <div class="col-4">
-              <button class="button" onclick="startGame(); save()"><i class="fa fa-play" aria-hidden="true"></i></button>
+              <button class="button" onclick="startGame()"><i class="fa fa-play" aria-hidden="true"></i></button>
             </div>
             <div class="col-2">
               <button class="button" onclick="setting()"><i class="fa fa-cog" aria-hidden="true"></i></button>
