--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <input type="text" class="txt" id="playerName" placeholder="input player name .."></input>
           <div class="row">
             <div class="col-4">
-              <button class="button" onclick="startGame()"><i class="fa fa-play" aria-hidden="true"></i></button>
+              <button class="button" onclick="submit()"><i class="fa fa-play" aria-hidden="true"></i></button>
             </div>
             <div class="col-2">
               <button class="button" onclick="setting()"><i class="fa fa-cog" aria-hidden="true"></i></button>
@@ -83,7 +83,10 @@
             <button onclick="back()" class="button"><i class="fa fa-home" aria-hidden="true"></i> Main Menu</button>
           </div>
           <div class="col">
-            <button onclick="startGame()" id="retry" class="button"><i class="fa fa-repeat" aria-hidden="true"></i></button>
+            <button onclick="back2()" class="button"><i class="fa fa-cog" aria-hidden="true"></i> Setting</button>
+          </div>
+          <div class="col">
+            <button onclick="startGame()" id="retry" class="button"><i class="fa fa-repeat" aria-hidden="true"></i> Retry</button>
           </div>
         </div>
       </div>
@@ -100,7 +103,7 @@
           </div>
           <div class="row">
             <div class="col-4 bordered-right">
-              <h6 id="cplayer">Player: White</h6>
+              <h6 id="cplayer">Player : White</h6>
               <div class="row">
                 <div class="col-4">
                   <button class="button white" onclick="changeColor('cplayer', '#EEEEEE')"></button>
@@ -114,7 +117,7 @@
               </div>
             </div>
             <div class="col-4 bordered-right">
-              <h6 id="claser">Laserbeam: Red</h6>
+              <h6 id="claser">Laserbeam : Red</h6>
               <div class="row">
                 <div class="col-4">
                   <button class="button red" onclick="changeColor('claser', '#E53935')"></button>
@@ -128,7 +131,7 @@
               </div>
             </div>
             <div class="col-4 bordered">
-              <h6 id="citem">Item: Green</h6>
+              <h6 id="citem">Item : Green</h6>
               <div class="row">
                 <div class="col-4">
                   <button class="button green" onclick="changeColor('citem', '#8BC34A')"></button>
@@ -144,13 +147,13 @@
           </div>
           <div class="btn-vol row">
               <div class="col-4">
-                  <h6 id="caudio">Music: On</h6>
+                  <h6 id="caudio">Music : On</h6>
                   <div class="row">
                     <div class="col-6">
-                      <button class="button" onclick="toggleAudio('On')">On</button>
+                      <button class="button" onclick="toggleAudio('On')"><i class="fa fa-volume-up" aria-hidden="true"></i></button>
                     </div>
                     <div class="col-6">
-                      <button class="button" onclick="toggleAudio('Off')">Off</button>
+                      <button class="button" onclick="toggleAudio('Off')"><i class="fa fa-volume-off" aria-hidden="true"></i></button>
                     </div>
                   </div>
               </div>
@@ -158,7 +161,8 @@
         </div>
         <div class="row">
           <div class="col-3 col-sm-3 col-md-3">
-            <button onclick="back()" class="button"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button id="btn1" onclick="back()" class="button"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button id="btn2" onclick="backSet()" class="button gameOver"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
           </div>
         </div>
       </div>
@@ -310,6 +314,16 @@
       document.getElementById("help").style.display = "none";
       document.getElementById("about").style.display = "none";
       document.getElementById("cover").style.display = "block";
+    }
+    function back2(){
+      document.getElementById("setting").style.display = "block";
+      document.getElementById("ui").style.display = "none";
+      document.getElementById("btn1").style.display = "none";
+      document.getElementById("btn2").style.display = "block";
+    }
+    function backSet() {
+      document.getElementById("ui").style.display = "block";
+      document.getElementById("setting").style.display = "none";
     }
   </script>
   <script src="https://apis.google.com/js/platform.js" async defer>
