--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <div class="col">
               <p><strong><i class="fa fa-desktop" aria-hidden="true"></i> Desktop</strong></p>
               <ul style="list-style-type:none">
-                <li><a href="/install/Setup.exe">setup.exe</a></li>
+                <li><a href="https://drive.google.com/file/d/0BysL3CntY0prMFhWTTFSQXVBVHc/view?usp=sharing">setup.exe</a></li>
               </ul>
             </div>
           </div>
@@ -235,7 +235,7 @@
             <div class="col">
               <p><strong><i class="fa fa-mobile" aria-hidden="true"></i> Android</strong></p>
               <ul style="list-style-type:none">
-                <li><a href="/install/SpaceLimit.apk">SpaceLimit.apk</a></li>
+                <li><a href="https://drive.google.com/file/d/0BysL3CntY0prQkZ1Q2xMZkhYNFE/view?usp=sharing">SpaceLimit.apk</a></li>
               </ul>
             </div>
           </div>
